# File_Crypter

./: .gitignore  CMakeLists.txt  README.md
DES/: decrypt.cpp  decrypted.txt  encrypted.txt  helper.h  input.txt  main.cpp
app/: c.txt
docs/: DES_INTEGRATION_SUMMARY.md
encdec/: decompressed.txt  input.txt  main.cpp
encdec/DES/: des.cpp  des.hpp
encdec/Huffman/: huffman.cpp  huffman.hpp
examples/: basic_usage.cpp  des_comparison.cpp
src/: main.cpp  main_custom_des.cpp
src/des/: des_custom.cpp  des_custom.h  des_openssl.cpp  des_openssl.h
src/huffman/: huffman.cpp  huffman.h
src/utils/: crypto_utils.cpp  crypto_utils.h  file_utils.cpp  file_utils.h
tests/: test_basic.cpp  test_des_implementations.cpp
